# iota-terminal

./: .dockerignore  .env.example  .gitignore  .prettierignore  Makefile  README.md  package-lock.json  package.json  turbo.json
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
.husky/: pre-push
apps/angular-ui/: Caddyfile  Dockerfile  angular.json  eslint.config.js  package.json  proxy.conf.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
apps/angular-ui/src/: app.component.html  app.component.ts  app.routes.ts  backend.ts  index.html  main.ts  styles.css
apps/backend-go/: Dockerfile  go.mod  go.sum  main.go  package.json
apps/backend-rust/: Cargo.toml  Dockerfile  package.json
apps/backend-rust/src/: main.rs
apps/backend-ts/: Dockerfile  package.json  tsconfig.json
apps/backend-ts/src/: index.ts  iota-types.d.ts
apps/react-ui/: Caddyfile  Dockerfile  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/react-ui/src/: App.tsx  backend.ts  custom-elements.d.ts
deploy/: .env.example  DEPLOYMENT.md  docker-compose.ci.yml  docker-compose.yml  smoke-test.sh
deploy/cloudflared/: config.yml.example  generate-config.sh
shared/: README.md
shared/content/: package.json  tsconfig.json
shared/content/src/: about-me.ts  about-site.ts  index.ts  nav.ts  projects.ts  resume.ts
shared/db/migrations/: schema.sql
shared/styles/: styles.css  tailwind.preset.js
shared/types/: package.json  tsconfig.json
shared/types/src/: enums.js  enums.ts  (+2 more)
shared/ui/: package.json
(+39 files in other folders)
