[package]
name = "backend-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "backend-rust"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
